CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(TRACKER_TESTTANK_ANALYSIS)

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

FIND_PACKAGE(ROOT REQUIRED)

INCLUDE(${ROOT_USE_FILE})

#INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(ANALYSIS ./src/main.cpp)
